# Advent-of-Code

./: README.md
2023/ruby/advent_of_code/2023/: main.rb
2023/ruby/advent_of_code/2023/days/01/: first_december.rb
2023/ruby/advent_of_code/2023/days/02/: second_december.rb
2023/rust/advent_of_code/src/twenty_three/: days.rs
2023/rust/advent_of_code/src/twenty_three/days/: shared.rs
2024/advent_of_code/src/first/: first.rs  mod.rs
2024/advent_of_code/src/second/: second.rs
2024/cpp/advent_of_code/: .gitignore  CMakeLists.txt  main.cpp
2024/cpp/advent_of_code/day2/: day2.cpp
2024/cpp/advent_of_code/src/day2/: day2.cpp
2024/cpp/advent_of_code/src/day3/: day3.cpp
2024/cpp/advent_of_code/src/day4/: day4.cpp
2024/rust/advent_of_code/src/: main.rs
2024/rust/advent_of_code/src/first/: first.rs  mod.rs
2024/rust/advent_of_code/src/second/: mod.rs  second.rs
advent_of_code/: Cargo.toml
advent_of_code/src/: main.rs
advent_of_code/src/01/: first.rs  second.rs
ruby/advent_of_code/: .gitignore  main.rb
ruby/advent_of_code/2023/: twenty_three.rb
ruby/advent_of_code/2023/days/: days.rb
ruby/advent_of_code/days/01/: first_december.rb
rust/advent_of_code/: Cargo.toml
rust/advent_of_code/src/: main.rs
rust/advent_of_code/src/2023/days/first/: solution.rs
rust/advent_of_code/src/2023/days/second/: solution.rs
rust/advent_of_code/src/twenty_three/: days.rs
rust/advent_of_code/src/twenty_three/days/first/: solution.rs
rust/advent_of_code/src/twenty_three/days/second/: solution.rs
(+3 files in other folders)
