[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"
# authors = "Julian Schumacher"
# homepage = "https://julianschumacher.dev"
# repository = "https://github.com/Julessh05/Advent-of-Code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]